--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 /* ✨ بخش قهرمان (Hero) */
 .hero {
- /* background: linear-gradient(180deg, var(--navy) 0%, var(--coffee) 100%);*/
+  background: white;
   color: #fff;
   text-align: center;
   padding: 60px 16px 40px;
