--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 /* ✨ بخش قهرمان (Hero) */
 .hero {
-  background: white;
+  background: #d2bba0;
   color: #fff;
   text-align: center;
   padding: 60px 16px 40px;
