--- a/style.css
+++ b/style.css
@@ -250,6 +250,10 @@ p {
   box-sizing: border-box;
 }
 
+/* وقتی دکمه‌ها برن خط دوم، فاصله پایین بیشتر میشه */
+.nav-buttons:has(.btn:nth-child(5)) {
+  margin-bottom: 2rem;
+}
 
 /* بیس دکمه */
 .btn{
@@ -267,6 +271,7 @@ p {
   border: 2px solid #d6a63a;
   border-radius: var(--radius);
   position:relative; isolation:isolate;
+
   /* تکنیک بوردر طلایی */
   background:
     linear-gradient(var(--bg),var(--bg)) padding-box,
