--- a/style.css
+++ b/style.css
@@ -122,10 +122,11 @@ a:hover { color: var(--hover); }
 }
 h2 {
   font-family: 'Great Vibes', cursive;
+  text-align: center;
   font-size: 25px;
   color: var(--navy);
-  margin-bottom: 44px;
-  padding: 40px 40px;
+/*  margin-bottom: 44px;
+  padding: 40px 40px; */
 }
 p { color: var(--ink); max-width: 700px; margin: 25px 22px auto; }
 
