--- a/style.css
+++ b/style.css
@@ -150,7 +150,11 @@ h2 {
 /*  margin-bottom: 44px;
   padding: 40px 40px; */
 }
-p { color: var(--ink); max-width: 700px; margin: 25px 22px auto; }
+p {
+  font-size: 30px;
+  color: var(--ink); 
+  max-width: 700px; 
+  margin: 25px 22px auto; }
 
 /* گالری شبکه‌ای */
 .gallery {
