--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   font-family: 'Great Vibes', cursive;
   font-size: 28px;
   color: #b68b2e; /* طلایی زیبا */
-  text-shadow: 0 0 6px rgba(182,139,46,0.3);
+  /* text-shadow: 0 0 6px rgba(182,139,46,0.3);
 } */
 /* اگر بخوای حس دوستانه‌تر یا شیرینی‌پزی خانگی داشته باشی */
 
