--- a/style.css
+++ b/style.css
@@ -66,9 +66,11 @@ h1 {
 
 /* زیرتیتر در هدر (اگر استفاده شود) */
 .subtitle {
+  text-align: center;
+  max-width: 800px;
   color: var(--black);
   font-size: 18px;
-  margin: 12px 0 18px;
+  margin: 0 auto;/*  برای وسط قرار گرفتن در صفحه */
 }
 
 /* -------------------- ناوبری قرصی بالای هدر -------------------- */
