--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1 {
 
 /* زیرتیتر در هدر (اگر استفاده شود) */
 .subtitle {
-  text-align: center;
+  text-align: center !important;
  /* max-width: 800px;  */
   color: var(--black);
   font-size: 18px;
